[package]
name = "sbml-macros"
version = "0.1.0"
authors = ["Pranav Ballaney <ballaneypranav@gmail.com>"]
edition = "2018"
description = "Macros for sbml-rs."
homepage = "https://github.com/ballaneypranav/sbml-rs"
repository = "https://github.com/ballaneypranav/sbml-rs"
license = "MIT OR Apache-2.0"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
quote = "1.0.9"
syn = { version = "1.0.73", features = ["extra-traits", "full" ]}
proc-macro2 = "1.0.27"
convert_case = "0.4.0"

[lib]
proc-macro = true
