[package]
name = "sbml-rs"
version = "0.1.0"
authors = ["Pranav Ballaney <ballaneypranav@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
quick-xml = "0.22.0"
sbml-macros = { path = "../sbml-macros" }
mathml-rs = { path = "../../mathml-rs/mathml-rs" }
