[package]
name = "sbml-rs"
version = "0.1.1-alpha.2"
authors = ["Pranav Ballaney <ballaneypranav@gmail.com>"]
edition = "2018"
description = "SBML parser written in Rust."
homepage = "https://github.com/ballaneypranav/sbml-rs"
repository = "https://github.com/ballaneypranav/sbml-rs"
license = "MIT OR Apache-2.0"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
quick-xml = "0.22.0"
sbml-macros = { path = "../sbml-macros" , version = "0.1.1-alpha"}
mathml-rs = { path = "../../mathml-rs/mathml-rs", version = "0.1.1-alpha"}
